[gd_scene load_steps=7 format=3 uid="uid://xsbrihohrdr4"]

[ext_resource type="Script" uid="uid://bp5a4x32qhdfq" path="res://game.gd" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://bcb8dub566dhk" path="res://game_field.gd" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://do6h4lj0snjoi" path="res://selector_value_updater.gd" id="3_h2yge"]

[sub_resource type="LabelSettings" id="LabelSettings_ig7tw"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_1bvp3"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_lquwl"]
font_size = 12

[node name="Game" type="Node2D"]
script = ExtResource("1_0xm2m")

[node name="GameField" type="Node2D" parent="."]
visible = false
script = ExtResource("1_ig7tw")
rows = 15
columns = 15
difficulty = 0.2

[node name="LoseScreen" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="LoseScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -100.0
offset_right = 154.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1

[node name="Label" type="Label" parent="LoseScreen/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -133.0
offset_top = 21.0
offset_right = 135.0
offset_bottom = 88.0
grow_horizontal = 2
text = "Game lost"
label_settings = SubResource("LabelSettings_ig7tw")
uppercase = true

[node name="Container" type="Control" parent="LoseScreen/Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 31.0
offset_top = -57.0
offset_right = -31.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0

[node name="RestartButton" type="Button" parent="LoseScreen/Panel/Container"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 79.0
grow_vertical = 0
mouse_filter = 1
text = "RESTAT"

[node name="ExitButton" type="Button" parent="LoseScreen/Panel/Container"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -79.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 1
text = "EXIT"

[node name="WinScreen" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="WinScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -100.0
offset_right = 154.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1

[node name="Label" type="Label" parent="WinScreen/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -133.0
offset_top = 21.0
offset_right = 135.0
offset_bottom = 88.0
grow_horizontal = 2
text = "You won"
label_settings = SubResource("LabelSettings_ig7tw")
horizontal_alignment = 1
uppercase = true

[node name="Container" type="Control" parent="WinScreen/Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 31.0
offset_top = -57.0
offset_right = -31.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0

[node name="RestartButton" type="Button" parent="WinScreen/Panel/Container"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 79.0
grow_vertical = 0
mouse_filter = 1
text = "RESTAT"

[node name="ExitButton" type="Button" parent="WinScreen/Panel/Container"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -79.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 1
text = "EXIT"

[node name="MainMenu" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="MainMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -142.0
offset_right = 240.0
offset_bottom = 142.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainMenu/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -84.0
offset_top = 32.0
offset_right = 84.0
offset_bottom = 66.0
grow_horizontal = 2
text = "Minesweeper"
label_settings = SubResource("LabelSettings_1bvp3")
uppercase = true

[node name="Options" type="Control" parent="MainMenu/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -20.0
offset_right = 120.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="RowsSelector" type="Control" parent="MainMenu/Panel/Options"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 20.0
grow_horizontal = 2
script = ExtResource("3_h2yge")

[node name="Name" type="Label" parent="MainMenu/Panel/Options/RowsSelector"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 23.0
text = "Rows"
label_settings = SubResource("LabelSettings_lquwl")

[node name="Slider" type="HSlider" parent="MainMenu/Panel/Options/RowsSelector"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_right = 99.0
offset_bottom = 16.0
grow_horizontal = 2
min_value = 4.0
max_value = 40.0
value = 12.0

[node name="Value" type="Label" parent="MainMenu/Panel/Options/RowsSelector"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -22.0
offset_bottom = 23.0
grow_horizontal = 0
text = "12"
label_settings = SubResource("LabelSettings_lquwl")
horizontal_alignment = 2

[node name="ColumnsSelector" type="Control" parent="MainMenu/Panel/Options"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 21.0
offset_bottom = 41.0
grow_horizontal = 2
script = ExtResource("3_h2yge")

[node name="Name" type="Label" parent="MainMenu/Panel/Options/ColumnsSelector"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 23.0
text = "Columns"
label_settings = SubResource("LabelSettings_lquwl")

[node name="Slider" type="HSlider" parent="MainMenu/Panel/Options/ColumnsSelector"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -63.0
offset_right = 100.0
offset_bottom = 16.0
grow_horizontal = 2
min_value = 4.0
max_value = 40.0
value = 12.0

[node name="Value" type="Label" parent="MainMenu/Panel/Options/ColumnsSelector"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -22.0
offset_bottom = 23.0
grow_horizontal = 0
text = "12"
label_settings = SubResource("LabelSettings_lquwl")
horizontal_alignment = 2

[node name="DifficultySelector" type="Control" parent="MainMenu/Panel/Options"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 42.0
offset_bottom = 62.0
grow_horizontal = 2

[node name="Name" type="Label" parent="MainMenu/Panel/Options/DifficultySelector"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 23.0
text = "Difficulty"
label_settings = SubResource("LabelSettings_lquwl")

[node name="Slider" type="HSlider" parent="MainMenu/Panel/Options/DifficultySelector"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -63.0
offset_right = 100.0
offset_bottom = 16.0
grow_horizontal = 2
min_value = 0.01
max_value = 0.95
step = 0.0
value = 0.2

[node name="StartButton" type="Button" parent="MainMenu/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -23.0
offset_top = -86.0
offset_right = 23.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 0
text = "Start"

[node name="GameControls" type="CanvasLayer" parent="."]
visible = false

[node name="Control" type="Control" parent="GameControls"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -88.0
offset_right = 88.0
offset_bottom = 52.0
grow_horizontal = 2

[node name="RestartButton" type="Button" parent="GameControls/Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.5
offset_right = 75.0
offset_bottom = 15.5
grow_vertical = 2
text = "RESTART"

[node name="ExitButton" type="Button" parent="GameControls/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "EXIT"

[node name="Camera" type="Camera2D" parent="."]

[connection signal="game_lost" from="GameField" to="." method="_on_game_field_game_lost"]
[connection signal="game_won" from="GameField" to="." method="_on_game_field_game_won"]
[connection signal="pressed" from="LoseScreen/Panel/Container/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="LoseScreen/Panel/Container/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="WinScreen/Panel/Container/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="WinScreen/Panel/Container/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="value_changed" from="MainMenu/Panel/Options/RowsSelector/Slider" to="MainMenu/Panel/Options/RowsSelector" method="_on_slider_value_changed"]
[connection signal="value_changed" from="MainMenu/Panel/Options/ColumnsSelector/Slider" to="MainMenu/Panel/Options/ColumnsSelector" method="_on_slider_value_changed"]
[connection signal="pressed" from="MainMenu/Panel/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="GameControls/Control/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="GameControls/Control/ExitButton" to="." method="_on_exit_button_pressed"]
